font size of p tags and li tags changed

--- a/public/advise.html
+++ b/public/advise.html
@@ -46,7 +46,7 @@
         <section class="first-main-section">
             <div class="container-fluid first-header">
                 <h1 class="text-center">Aviso de Privacidad</h1>
-                <p class="text-center fist-paragraph">
+                <p class="text-center card-text">
                     Lea atentamente nuestro aviso de Privacidad
                 </p>
             </div>
@@ -55,33 +55,33 @@
         <section class="advise-second-main-section">
             <div class="container-fluid">
                 <h3 class="text-left">I. Identidad y Domicilio</h3>
-                <p class="text-left fist-paragraph">
+                <p class="text-left card-text">
                     I. Identidad y Domicilio information
                 </p>
             </div>
             <div class="container-fluid">
                 <h3 class="text-left">II. Datos Personales</h3>
-                <p class="text-left fist-paragraph">
+                <p class="text-left card-text">
                     II. Datos Personales information
                 </p>
             </div>
             <div class="container-fluid">
                 <h3 class="text-left">III. Medios para el acceso, rectificación, cancelación y/o oposición al
                     tratamiento de datos.</h3>
-                <p class="text-left fist-paragraph">
+                <p class="text-left card-text">
                     III. Medios para el acceso, rectificación, cancelación y/o oposición al tratamiento de datos
                     information.
                 </p>
             </div>
             <div class="container-fluid">
                 <h3 class="text-left">IV. Medio para modificar el Aviso de Privacidad.</h3>
-                <p class="text-left fist-paragraph">
+                <p class="text-left card-text">
                     IV. Medio para modificar el Aviso de Privacidad information.
                 </p>
             </div>
             <div class="container-fluid">
                 <h3 class="text-left">V. Aviso de Privacidad Integral</h3>
-                <p class="text-left fist-paragraph">
+                <p class="text-left card-text">
                     V. Aviso de Privacidad Integral information.
                 </p>
             </div>
