--- a/public/civil.html
+++ b/public/civil.html
@@ -50,28 +50,28 @@
         <section class="first-main-section">
             <div class="container-fluid first-header">
                 <h1 class="text-center">Litigio en Materia Civil y Mercantil</h1>
-                <p class=" fist-paragraph">
+                <p class=" mt-4 card-text">
                     El Derecho Civil y Mercantil abarca desde las relaciones civiles entre las personas hasta todos los
                     actos de comercio que se realizan entre los diferentes operadores del mercado.
                 </p>
-                <p class="fist-paragraph">
+                <p class="card-text">
                     En ciertas ocasiones las partes que firman un contrato no entregan los resultados a los que se
                     comprometieron en el mismo, cayendo en un incumplimiento o en la necesidad de rescindirlo.
                 </p>
-                <p class="fist-paragraph">
+                <p class="card-text">
                     También puede ocurrir que se deba recurrir a las autoridades para hacer válido algún derecho civil o
                     mercantil.
                 </p>
-                <p class="fist-paragraph">
+                <p class="card-text">
                     De igual forma, puede presentarse el caso de que se necesite ayuda para hacer valer algún título de
                     crédito que se haya otorgado, como cheques o pagarés, o que se requiera la ejecución de una
                     garantía.
                 </p>
-                <p class="fist-paragraph">
+                <p class="card-text">
                     O puede suceder que sea necesario recurrir a la figura del amparo, en el caso de un juicio civil o
                     mercantil.
                 </p>
-                <p class="fist-paragraph">
+                <p class="card-text">
                     Todos estos supuestos son algunos de los casos en los que Iglesias y Abogados apoya a sus clientes
                     en materia civil y mercantil, utilizando los instrumentos y procedimientos jurídicos adecuados para
                     llegar a la mejor resolución del caso.
@@ -90,13 +90,13 @@
                         <div class="card-body">
                             <h2 class="card-title">Podemos apoyar en:</h2>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Incumplimiento, recisión o cumplimiento forzoso de contratos.</li>
-                                <li class="list-group-item">Ejecución de derechos civiles y mercantiles, tales como cobranza judicial y extra judicial.</li>
-                                <li class="list-group-item">Ejecución de cheques, pagarés y títulos de crédito, al igual que de garantías hipotecarias y prendarias.</li>
-                                <li class="list-group-item">Recuperación de carteras vencidas.</li>
-                                <li class="list-group-item">Elaboración de contratos de todo tipo en materia civil y mercantil.</li>
-                                <li class="list-group-item">Amparos.</li>
-                                <li class="list-group-item">Seguros y fianzas.</li>
+                                <li class="list-group-item card-text">Incumplimiento, recisión o cumplimiento forzoso de contratos.</li>
+                                <li class="list-group-item card-text">Ejecución de derechos civiles y mercantiles, tales como cobranza judicial y extra judicial.</li>
+                                <li class="list-group-item card-text">Ejecución de cheques, pagarés y títulos de crédito, al igual que de garantías hipotecarias y prendarias.</li>
+                                <li class="list-group-item card-text">Recuperación de carteras vencidas.</li>
+                                <li class="list-group-item card-text">Elaboración de contratos de todo tipo en materia civil y mercantil.</li>
+                                <li class="list-group-item card-text">Amparos.</li>
+                                <li class="list-group-item card-text">Seguros y fianzas.</li>
                             </ul>
                         </div>
                     </div>
