--- a/public/contactform.html
+++ b/public/contactform.html
@@ -46,15 +46,15 @@
                 <h1 class="text-center contact-h1">Contáctanos</h1>
                 <form class="row g-3">
                     <div class="col-md-6">
-                        <label for="inputEmail4" class="form-label">Email</label>
+                        <label for="inputEmail4" class="form-label card-text">Email</label>
                         <input type="email" class="form-control" id="inputEmail4">
                     </div>
                     <div class="col-md-6 mb-3">
-                        <label for="inputPassword4" class="form-label">Nombre Completo</label>
+                        <label for="inputPassword4" class="form-label card-text">Nombre Completo</label>
                         <input type="text" class="form-control" id="inputPassword4">
                     </div>
                     <div class="col-12 mb-3">
-                        <label for="exampleFormControlTextarea1" class="form-label">Cuéntanos tu problema</label>
+                        <label for="exampleFormControlTextarea1" class="form-label card-text">Cuéntanos tu problema</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
 
