--- a/public/inmobiliario.html
+++ b/public/inmobiliario.html
@@ -29,13 +29,13 @@
                     <div class="navbar-nav">
                         <a class="nav-link" aria-current="page" href="/conocenos">Conócenos</a>
                         <a class="nav-item nav-link active" href="/derechoinmobiliario">Derecho Inmobiliario</a>
-                        <a class="nav-item nav-link" href="/derechocivilymercantil">Derecho Civil y Mercantil</a>
-                        <a class="nav-item nav-link" href="/derechofamiliar">Derecho Familiar</a>
-                        <a class="nav-item nav-link" href="/derechopenal">Derecho Penal</a>
-                        <a class="nav-item nav-link" href="/investigaciones">Investigaciónes</a>
-                        <a class="nav-item nav-link" href="/publicaciones">Publicaciones</a>
-                        <a class="nav-item nav-link" href="/contacto">Contacto</a>
-                        <a class="nav-item nav-link" href="/avisodeprivacidad">Aspectos Legales/Aviso de Privacidad</a>
+                        <a class="nav-item  nav-link" href="/derechocivilymercantil">Derecho Civil y Mercantil</a>
+                        <a class="nav-item  nav-link" href="/derechofamiliar">Derecho Familiar</a>
+                        <a class="nav-item  nav-link" href="/derechopenal">Derecho Penal</a>
+                        <a class="nav-item  nav-link" href="/investigaciones">Investigaciónes</a>
+                        <a class="nav-item  nav-link" href="/publicaciones">Publicaciones</a>
+                        <a class="nav-item  nav-link" href="/contacto">Contacto</a>
+                        <a class="nav-item  nav-link" href="/avisodeprivacidad">Aspectos Legales/Aviso de Privacidad</a>
                     </div>
                 </div>
             </div>
@@ -49,19 +49,19 @@
         <section class="first-main-section">
             <div class="container-fluid first-header">
                 <h1 class="text-center">Litigio en materia inmobiliaria</h1>
-                <p class=" fist-paragraph">
+                <p class="card-text mt-4">
                     El derecho inmobiliario se encarga de regular todo lo referente a bienes inmuebles y en Iglesias y
                     Asociados sabemos la importancia del patrimonio de nuestros clientes.
                 </p>
-                <p class="fist-paragraph">
+                <p class="card-text ">
                     Conocemos los instrumentos y herramientas para conformar un buen contrato de arrendamiento, ya sea
                     comercial, industrial o de casa habitación, y tenemos la experiencia para litigar cualquier
                     conflicto que pueda suscitarse de esta acción.
                 </p>
-                <p class="fist-paragraph">
+                <p class="card-text ">
                     Además, apoyamos en la obtención y el cambio de uso de habitación.
                 </p>
-                <p class="fist-paragraph">
+                <p class="card-text ">
                     Tomando en cuenta el esfuerzo que cada persona realiza para adquirir un bien inmueble, asesoramos y
                     apoyamos a todos nuestros clientes para poder recuperar sus bienes.
                 </p>
@@ -79,13 +79,13 @@
                         <div class="card-body">
                             <h2 class="card-title">Podemos apoyar en:</h2>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">
+                                <li class="list-group-item card-text">
                                     Arrendamientos industriales, comerciales y casa habitación.
                                 </li>
-                                <li class="list-group-item">
+                                <li class="list-group-item card-text">
                                     Uso de habitación.
                                 </li>
-                                <li class="list-group-item">
+                                <li class="list-group-item card-text">
                                     Recuperacición de inmuebles.
                                 </li>
                             </ul>
@@ -111,7 +111,7 @@
                     <h3 class="card-title">
                         No importa el conflicto, siempre hay una solución
                     </h3>
-                    <a href="/publicaciones" class="btn btn-primary">Publicaciones</a>
+                    <a href="/contacto" class="btn btn-primary">Contáctanos</a>
                 </div>
             </div>
         </section>
