--- a/public/investigaciones.html
+++ b/public/investigaciones.html
@@ -49,11 +49,11 @@
         <section class="first-main-section">
             <div class='container-fluid first-header'>
                 <h1 class='text-center'>Investigaciones</h1>
-                <p class='fist-paragraph'>
+                <p class='card-text mt-4'>
                     Como parte esencial del litigio, la investigación conforma uno de los elementos en los que debe
                     basarse cualquier caso jurídico.
                 </p>
-                <p class='fist-paragraph'>
+                <p class='card-text'>
                     En Iglesias y Abogados tenemos la experiencia necesaria para conformar cualquier investigación de
                     forma profesional, adecuándonos a las necesidades de nuestros clientes.
                 </p>
@@ -73,10 +73,10 @@
                                 Los tipos de investigaciones que realizamos son:
                             </h2>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Jurídicas.</li>
-                                <li class="list-group-item">Financieras.</li>
-                                <li class="list-group-item">Infidelidades.</li>
-                                <li class="list-group-item">Búsqueda y localización de personas.</li>
+                                <li class="list-group-item card-text">Jurídicas.</li>
+                                <li class="list-group-item card-text">Financieras.</li>
+                                <li class="list-group-item card-text">Infidelidades.</li>
+                                <li class="list-group-item card-text">Búsqueda y localización de personas.</li>
                             </ul>
                         </div>
                     </div>
