--- a/public/penal.html
+++ b/public/penal.html
@@ -49,36 +49,36 @@
         <section class="first-main-section">
             <div class="container-fluid first-header">
                 <h1 class="text-center">Litigio en materia penal</h1>
-                <p class="fist-paragraph">
+                <p class="card-text mt-4">
                     El derecho penal es la rama del derecho que regula la actividad criminal en el estado. Todas las
                     conductas delictivas están comprendidas en esta materia y su litigio debe ser realizado de manera
                     profesional y eficiente, pues pone en riesgo tanto a las víctimas como a los victimarios,
                     llevándolos incluso a la pérdida de su libertad.
                 </p>
-                <p class="fist-paragraph">
+                <p class="card-text">
                     El catálogo de delitos que contempla el derecho penal es muy amplio, contemplando aquellos que van
                     desde el robo hasta la violencia, pasando por incumplimiento de mandatos judiciales y engaños.
                 </p>
-                <p class="fist-paragraph">
+                <p class="card-text">
                     Cuando una persona es acusada de algún delito patrimonial, como fraude, robo o abuso de confianza,
                     una buena defensa comienza desde la asesoría que pueda brindarle un equipo jurídico profesional,
                     estableciendo las bases sobre las que se sustentará su defensa para poder llevar a buen fin el caso.
                 </p>
-                <p class="fist-paragraph">
+                <p class="card-text">
                     También las víctimas necesitan de una asesoría, orientación, acompañamiento y apoyo cuando han sido
                     afectadas por diversos delitos, como violencia familiar, homicidio, secuestro, lesiones, trata de
                     personas o privación ilegal de la libertad.
                 </p>
-                <p class="fist-paragraph">
+                <p class="card-text">
                     Incluso en el caso de delitos de delincuencia organizada requieren un apoyo jurídico que determine
                     el seguimiento y resolución del caso, mediante un litigio profesional y, sobre todo, honesto.
                 </p>
-                <p class="fist-paragraph">
+                <p class="card-text">
                     El litigio en materia penal conlleva una gran responsabilidad y debe ser realizado desde las bases
                     más honestas y transparentes, tanto para los imputados como para las víctimas, persiguiendo en todo
                     momento la justicia que, en cada caso, debe ser tratado de forma individual.
                 </p>
-                <p class="fist-paragraph">
+                <p class="card-text">
                     Bajo el legado de nuestro fundador, en Iglesias y Abogados estamos comprometidos con la justicia en
                     materia penal, haciendo un análisis exhaustivo de cada uno de los casos y comunicando, con total
                     transparencia, las posibles soluciones a los diferentes delitos, sin prometer resultados que no
@@ -98,30 +98,30 @@
                         <div class="card-body">
                             <h2 class="card-title">En materia penal, ofrecemos asesoría y apoyo en:</h2>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Allanamiento de morada.</li>
-                                <li class="list-group-item">Apoyo a víctimas y asesoría jurídica en materia de delitos
+                                <li class="list-group-item card-text">Allanamiento de morada.</li>
+                                <li class="list-group-item card-text">Apoyo a víctimas y asesoría jurídica en materia de delitos
                                     sexuales (violación, abuso sexual, acoso sexual).</li>
-                                <li class="list-group-item">Defensa y o asesoría jurídica en delitos patrimoniales
+                                <li class="list-group-item card-text">Defensa y o asesoría jurídica en delitos patrimoniales
                                     (fraude, abuso de confianza y robos).</li>
-                                <li class="list-group-item">Delincuencia organizada.</li>
-                                <li class="list-group-item">Delitos ambientales.</li>
-                                <li class="list-group-item">Desacatos.</li>
-                                <li class="list-group-item">Despojos.</li>
-                                <li class="list-group-item">Encubierto.</li>
-                                <li class="list-group-item">Extorsiones.</li>
-                                <li class="list-group-item">Falsedad ante autoridades.</li>
-                                <li class="list-group-item">Falsificación de documentos.</li>
-                                <li class="list-group-item">Homicidio.</li>
-                                <li class="list-group-item">Incumplimiento de obligaciones alimenticias.</li>
-                                <li class="list-group-item">Lesiones.</li>
-                                <li class="list-group-item">Posesión, portación y uso de armas de fuego.</li>
-                                <li class="list-group-item">Privación ilegal de la libertad.</li>
-                                <li class="list-group-item">Rompimiento de sellos.</li>
-                                <li class="list-group-item">Secuestro.</li>
-                                <li class="list-group-item">Sustracción de menores.</li>
-                                <li class="list-group-item">Trata de personas.</li>
-                                <li class="list-group-item">Ultrajes (insulto a la autoridad).</li>
-                                <li class="list-group-item">Violencia Familiar.</li>
+                                <li class="list-group-item card-text">Delincuencia organizada.</li>
+                                <li class="list-group-item card-text">Delitos ambientales.</li>
+                                <li class="list-group-item card-text">Desacatos.</li>
+                                <li class="list-group-item card-text">Despojos.</li>
+                                <li class="list-group-item card-text">Encubierto.</li>
+                                <li class="list-group-item card-text">Extorsiones.</li>
+                                <li class="list-group-item card-text">Falsedad ante autoridades.</li>
+                                <li class="list-group-item card-text">Falsificación de documentos.</li>
+                                <li class="list-group-item card-text">Homicidio.</li>
+                                <li class="list-group-item card-text">Incumplimiento de obligaciones alimenticias.</li>
+                                <li class="list-group-item card-text">Lesiones.</li>
+                                <li class="list-group-item card-text">Posesión, portación y uso de armas de fuego.</li>
+                                <li class="list-group-item card-text">Privación ilegal de la libertad.</li>
+                                <li class="list-group-item card-text">Rompimiento de sellos.</li>
+                                <li class="list-group-item card-text">Secuestro.</li>
+                                <li class="list-group-item card-text">Sustracción de menores.</li>
+                                <li class="list-group-item card-text">Trata de personas.</li>
+                                <li class="list-group-item card-text">Ultrajes (insulto a la autoridad).</li>
+                                <li class="list-group-item card-text">Violencia Familiar.</li>
                             </ul>
                         </div>
                     </div>
