--- a/public/welcome.html
+++ b/public/welcome.html
@@ -52,21 +52,21 @@
         <section class="first-main-section">
             <div class="container-fluid first-header">
                 <h1 class="text-center" style="margin-bottom: 25px;">Iglesias y Abogados</h1>
-                <p class="text-left fist-paragraph">
+                <p class="text-left card-text">
                     Somos un bufete de abogados especializados en litigio, con más de 20 años de experiencia en materia
                     civil y mercantil, familiar, inmobiliaria, penal, y en investigaciones.
                 </p>
-                <p class="text-left fist-paragraph">
+                <p class="text-left card-text">
                     Establecido por su fundador, el licenciado Luis Iglesias Garcia, especialista en derecho civil y
                     mercantil, Iglesias y Asociados comienza su funcionamiento en el año 1975, bajo la ideología de
                     defender a sus clientes contra las injusticias que se presentan a lo largo de los procesos
                     judiciales.
                 </p>
-                <p class="text-left fist-paragraph">
+                <p class="text-left card-text">
                     Esta idea fue transmitida a su hijo, el Licenciado Rodrigo Iglesias Campos, quien se integra a su
                     equipo de abogados en el año 1998, como especialista en derecho penal.
                 </p>
-                <p class="text-left fist-paragraph">
+                <p class="text-left card-text">
                     Al fallecimiento de su fundador, el bufete continúa ofreciendo sus servicios de litigio en materia
                     penal, familiar, inmobiliaria y en investigaciones, conformando, a la fecha, un equipo de abogados
                     que comparte su legado, lidereados por el licenciado Rodrigo Iglesias Campos.
@@ -84,7 +84,7 @@
                         <div class="card-body">
                             <h2 class="card-title">Misión</h2>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Resolver los conflictos e injusticias a los que se enfrentan
+                                <li class="list-group-item card-text">Resolver los conflictos e injusticias a los que se enfrentan
                                     nuestros
                                     clientes de manera rápida y eficiente, con la premisa de que siempre hay una
                                     solución.
@@ -96,7 +96,7 @@
                         <div class="card-body">
                             <h2 class="card-title">Visión</h2>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Otorgar a toda la población mexicana la certeza que existen
+                                <li class="list-group-item card-text">Otorgar a toda la población mexicana la certeza que existen
                                     recursos
                                     para obtener una solución justa a sus conflictos, ofreciéndoles los instrumentos
                                     jurídicos necesarios para defenderlos de los excesos y abusos de la autoridad.</li>
@@ -113,10 +113,10 @@
                         <div class="card-body">
                             <h2 class="card-title">Valores</h2>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Tenacidad.</li>
-                                <li class="list-group-item">Honestidad.</li>
-                                <li class="list-group-item">Lealtad.</li>
-                                <li class="list-group-item">Confianza.</li>
+                                <li class="list-group-item card-text">Tenacidad.</li>
+                                <li class="list-group-item card-text">Honestidad.</li>
+                                <li class="list-group-item card-text">Lealtad.</li>
+                                <li class="list-group-item card-text">Confianza.</li>
                             </ul>
                         </div>
                     </div>
@@ -128,13 +128,13 @@
             <h2 class="text-center my-4">Servicios</h2>
 
             <div class="list-group text-center">
-                <a href="/derechocivilymercantil" class="welcome-link list-group-item list-group-item-action" aria-current="true">
+                <a href="/derechocivilymercantil" class="welcome-link list-group-item list-group-item-action card-text" aria-current="true">
                     Derecho Civil y Mercantil
                 </a>
-                <a href="/derechofamiliar" class="welcome-link list-group-item list-group-item-action">Derecho Familiar</a>
-                <a href="/derechoinmobiliario" class="welcome-link list-group-item list-group-item-action">Derecho Inmobiliario</a>
-                <a href="/derechopenal" class="welcome-link list-group-item list-group-item-action">Derecho Penal</a>
-                <a href="/investigaciones" class="welcome-link list-group-item list-group-item-action">Investigaciónes</a>
+                <a href="/derechofamiliar" class="welcome-link list-group-item list-group-item-action card-text">Derecho Familiar</a>
+                <a href="/derechoinmobiliario" class="welcome-link list-group-item list-group-item-action card-text">Derecho Inmobiliario</a>
+                <a href="/derechopenal" class="welcome-link list-group-item list-group-item-action card-text">Derecho Penal</a>
+                <a href="/investigaciones" class="welcome-link list-group-item list-group-item-action card-text">Investigaciónes</a>
             </div>
         </section>
 
@@ -149,7 +149,7 @@
                     <h5 class="card-title">
                         No importa el conflicto, siempre hay una solución
                     </h5>
-                    <a href="/publicaciones" class="btn btn-primary">Publicaciones</a>
+                    <a href="/contacto" class="btn btn-primary">Contáctanos</a>
                 </div>
             </div>
         </section>
