--- a/public/familiar.html
+++ b/public/familiar.html
@@ -49,29 +49,29 @@
         <section class="first-main-section">
             <div class='container-fluid first-header'>
                 <h1 class='text-center'>Litigio en materia familiar</h1>
-                <p class='fist-paragraph'>El derecho familiar es la rama del derecho civil que se encarga de regular
+                <p class='card-text mt-4'>El derecho familiar es la rama del derecho civil que se encarga de regular
                     todas las relaciones que se suscitan entre los miembros de una familia.
                 </p>
-                <p class='fist-paragraph'>En la actualidad, ante los diversos cambios que experimenta la sociedad
+                <p class='card-text'>En la actualidad, ante los diversos cambios que experimenta la sociedad
                     mexicana, los conflictos entre miembros del núcleo familiar son cada día más comunes, por eso se
                     hace necesario contar con el apoyo jurídico necesario para llegar a una pronta y adecuada solución.
                 </p>
-                <p class='fist-paragraph'>En caso de un divorcio, por ejemplo, existen varias modalidades, como
+                <p class='card-text'>En caso de un divorcio, por ejemplo, existen varias modalidades, como
                     divorcios voluntarios, divorcios express o divorcios administrativos. En cualquier caso, es
                     importante contar con la asesoría jurídica y el apoyo adecuado.
                 </p>
-                <p class='fist-paragraph'>De igual forma, ante una separación, la obtención de una pensión alimenticia
+                <p class='card-text'>De igual forma, ante una separación, la obtención de una pensión alimenticia
                     es una materia de litigio importante. Cómo calcular esta pensión, saber lo que incluye y cómo
                     tramitarla, al igual que la determinación de un régimen de convivencia con los hijos, son conceptos
                     en los que se debe asesorar al interesado de manera eficiente.
                 </p>
-                <p class='fist-paragraph'>La importancia del tema de la violencia familiar en nuestros días hace
+                <p class='card-text'>La importancia del tema de la violencia familiar en nuestros días hace
                     necesario contar con un equipo de abogados que defienda, en todo momento, a las víctimas,
                     apoyándolos en la preservación de sus derechos. Desde denunciar la violencia familiar hasta obtener
                     justicia ante este tipo de delitos son procesos delicados que deben ser tratados de la forma más
                     profesional y adecuada.
                 </p>
-                <p class='fist-paragraph'>De igual forma, los procedimientos que conlleva una sucesión testamentaria, o
+                <p class='card-text'>De igual forma, los procedimientos que conlleva una sucesión testamentaria, o
                     los conflictos que se presentan en el caso de que un familiar haya fallecido sin testamento,
                     requieren también un trabajo profesional que asegure un buen término, con justicia y equidad para
                     los interesados.
@@ -91,26 +91,26 @@
                             <h2 class="card-title">En Iglesias y Abogados estamos comprometidos con los conflictos
                                 familiares, ofreciendo apoyo jurídico en:</h2>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Divorcios.</li>
-                                <li class="list-group-item">Liquidación de sociedad conyugal.</li>
-                                <li class="list-group-item">Régimen de convivencia.</li>
-                                <li class="list-group-item">Pensión alimenticia.</li>
-                                <li class="list-group-item">Aumento y disminución de pensiones.</li>
-                                <li class="list-group-item">Guardias y custodias.</li>
-                                <li class="list-group-item">Cambio de régimen patrimonial.</li>
-                                <li class="list-group-item">Compensaciones familiares.</li>
-                                <li class="list-group-item">Violencia familiar.</li>
-                                <li class="list-group-item">Órdenes de protección.</li>
-                                <li class="list-group-item">Sustracción de menores.</li>
-                                <li class="list-group-item">Restitución internacional de menores.</li>
-                                <li class="list-group-item">Restricciónes familiares.</li>
-                                <li class="list-group-item">Estados de interdicción.</li>
-                                <li class="list-group-item">Procedimientos de declaración de ausencia y presunción de
+                                <li class="list-group-item card-text">Divorcios.</li>
+                                <li class="list-group-item card-text">Liquidación de sociedad conyugal.</li>
+                                <li class="list-group-item card-text">Régimen de convivencia.</li>
+                                <li class="list-group-item card-text">Pensión alimenticia.</li>
+                                <li class="list-group-item card-text">Aumento y disminución de pensiones.</li>
+                                <li class="list-group-item card-text">Guardias y custodias.</li>
+                                <li class="list-group-item card-text">Cambio de régimen patrimonial.</li>
+                                <li class="list-group-item card-text">Compensaciones familiares.</li>
+                                <li class="list-group-item card-text">Violencia familiar.</li>
+                                <li class="list-group-item card-text">Órdenes de protección.</li>
+                                <li class="list-group-item card-text">Sustracción de menores.</li>
+                                <li class="list-group-item card-text">Restitución internacional de menores.</li>
+                                <li class="list-group-item card-text">Restricciónes familiares.</li>
+                                <li class="list-group-item card-text">Estados de interdicción.</li>
+                                <li class="list-group-item card-text">Procedimientos de declaración de ausencia y presunción de
                                     muerte.</li>
-                                <li class="list-group-item">Sucesiónes testamentarias e intestamentarias.</li>
-                                <li class="list-group-item">Reconocimiento de hijos.</li>
-                                <li class="list-group-item">Reconocimiento de paternidad.</li>
-                                <li class="list-group-item">Amparos.</li>
+                                <li class="list-group-item card-text">Sucesiónes testamentarias e intestamentarias.</li>
+                                <li class="list-group-item card-text">Reconocimiento de hijos.</li>
+                                <li class="list-group-item card-text">Reconocimiento de paternidad.</li>
+                                <li class="list-group-item card-text">Amparos.</li>
                             </ul>
                         </div>
                     </div>
