--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
             </div>
         </section>
 
-        <section>
+        <section class="mt-5">
             <h1 class="card-title text-center">Bufete de abogados especializados en litigio</h1>
         </section>
 
@@ -65,24 +65,24 @@
                 <div class="text-center card-header">Featured</div>
                 --}} -->
                 <div class="text-center card-body">
-                    <h2 class="card-title">
+                    <h2 class="card-title my-5">
                         ¿Tienes un conflicto en materia civil y mercantil, familiar, penal o inmobiliaria?
                     </h2>
-                    <p class="card-text">
+                    <p class="card-text text-left">
                         En Iglesias y Abogados nos dedicamos a encontrar siempre la solución.
                     </p>
-                    <p class="card-text">
+                    <p class="card-text text-left">
                         Enfrentamos de manera jurídica los conflictos ante los tribunales correspondientes, buscando
                         siempre la solución del problema, por eso somos especialistas en litigar. </p>
-                    <p class="card-text">
+                    <p class="card-text text-left">
                         De igual forma, conformamos investigaciones serias, que aporten elementos de prueba verídicos
                         para ser utilizados en un juicio, como parte de nuestro trabajo como litigantes.</p>
-                    <p class="card-text">
+                    <p class="card-text text-left">
                         Ofrecemos a todos nuestros clientes nuestra amplia experiencia en litigio, para resolver sus
                         conflictos de manera rápida y eficiente.</p>
-                    <p class="card-text">
+                    <p class="card-text text-left">
                         Te invitamos a conocernos:</p>
-                    <a href="/conocenos" class="btn btn-primary">Conócenos</a>
+                    <a href="/conocenos" class="btn btn-primary mt-5">Conócenos</a>
                 </div>
             </div>
         </section>
@@ -95,10 +95,10 @@
                 <div class="text-center card-header">Featured</div>
                 --}} -->
                 <div class="text-center card-body">
-                    <h3 class="card-title">
+                    <h3 class="card-title my-5">
                         No importa el conflicto, siempre hay una solución
                     </h3>
-                    <a href="/publicaciones" class="btn btn-primary">Publicaciones</a>
+                    <a href="/contacto" class="btn btn-primary">Contactanos</a>
                 </div>
             </div>
         </section>
